nqc/src/snapshots/nqc__error__test__err_span_display.snap
---
source: nqc/src/error.rs
expression: error.to_string()
---
Syntax error on line 2:
2| with an error
           ^^^^^
